# Emu3.5-FlashAR

./: .gitignore  README.md  check_nar_attention.py  generate.sh  generate_flashar.py  generate_neighbor_ar.py  inference.py  inference_vllm.py  model_runtime.py  precompute_teacher_topk.py  pretokenize_tar.py  pyproject.toml  tokenization.sh  train.sh  train_flashar.py  train_nar.py  train_neighbor_ar.py
GPT4o-Image_pretok_32/text_to_image_partfirst/: gpt4o_t2i_32.part0.rank0.tar  gpt4o_t2i_32.part0.rank1.tar  gpt4o_t2i_32.part0.rank2.tar  gpt4o_t2i_32.part0.rank3.tar  gpt4o_t2i_32.part0.rank4.tar  gpt4o_t2i_32.part0.rank5.tar  gpt4o_t2i_32.part0.rank6.tar  gpt4o_t2i_32.part0.rank7.tar  gpt4o_t2i_32.part1.rank0.tar  gpt4o_t2i_32.part1.rank1.tar  gpt4o_t2i_32.part1.rank2.tar  gpt4o_t2i_32.part1.rank3.tar  gpt4o_t2i_32.part1.rank4.tar  gpt4o_t2i_32.part1.rank5.tar  gpt4o_t2i_32.part1.rank6.tar  gpt4o_t2i_32.part1.rank7.tar
configs/: benchmark_t2i_ar.py  benchmark_t2i_flashar.py  benchmark_t2i_nar.py  config.py  example_config_t2i.py  example_config_visual_guidance.py  example_config_visual_narrative.py  example_config_x2i.py  train_flashar.default.json  train_flashar_finetune_50k.json  train_nar.default.json  train_nar_finetune_50k.json
emu_nar/: finetune.py  lora.py  merge_sharded_ckpt.py  modeling_emu_nar.py
emu_nar/data/: gpt4o_image.py  infinity_mm.py  pretokenize_tar.py  pretokenized.py
emu_nar/inference/: ._generation_utils.py  generation_utils.py  neighbor_ar_mask.py  neighbor_ar_wrapper.py
emu_nar/model/: __init__.py  modeling_emu_nar.py
emu_nar/utils/: __init__.py  checkpoint_utils.py  eval_utils.py  model_utils.py  training_utils.py
flashar/data/: gpt4o_image.py  pretokenize_tar.py  pretokenized.py
flashar/inference/: generation_utils.py  token_utils.py
flashar/model/: __init__.py  modeling_emu_flashar.py
flashar/utils/: __init__.py  checkpoint_utils.py  config_utils.py  eval_utils.py  model_utils.py  text_utils.py  (+1 more)
requirements/: common.txt
tools/: benchmark_ar_vs_flashar.py  benchmark_ar_vs_nar.py  generate_geneval_flashar.py  qwen_eval_steps.py  qwen_position_eval.py  rolling_pretokenize_cleanup.py  run_nogatecollapse_10k_geneval.sh  visualize_flashar_gate_map.py
(+8 files in other folders)
